--- a/vanilla-transformer/vanilla-transformer.ipynb
+++ b/vanilla-transformer/vanilla-transformer.ipynb
@@ -57,7 +57,7 @@
         "- Note that $d$ is the dimension of each token, whilst $h$ is the number of heads and the 3 comes about as we are consturcting 3 matrices (Q,K,V) for each head.\n",
         "- Note that 'nn.Linear()' is designed to compute operations on a vector so it will perform the operation on each token from each batch individually.\n",
         "\n",
-        "<img src=\"/content/drive/MyDrive/Litte ML Projects/Transformer from Scratch/QKV_matrix.png\" alt=\"Description of the image\" width=\"300\"/>\n"
+        "<img src=\"QKV_matrix.png\" alt=\"Description of the image\" width=\"300\"/>\n"
       ],
       "metadata": {
         "id": "bu3Jvd65uFiq"
